@@ -7,6 +7,8 @@ import project.ing.soft.model.gamemodel.IGameModel;
 import project.ing.soft.model.Colour;
 import project.ing.soft.model.Player;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class CopperFoilBurnisher extends ToolCardSingleState {
@@ -35,7 +37,10 @@ public class CopperFoilBurnisher extends ToolCardSingleState {
 
     @Override
     public void apply(Player p, IGameModel m) throws Exception {
-        p.moveDice(List.of(startPosition), List.of(endPosition), true, true, true);
+        p.moveDice(
+                new ArrayList<Coordinate>(Arrays.asList(startPosition)),
+                new ArrayList<Coordinate>(Arrays.asList(endPosition)),
+                true, true, true);
     }
 
     @Override
