@@ -70,7 +70,10 @@ public class PlayerTest {
        Player memento = testPlayerWithWhitePatternCardNoMove.getMemento();
 
             testPlayerWithWhitePatternCardNoMove.placeDie(new Die(1, Colour.BLUE), 0, 0, true);
-            testPlayerWithWhitePatternCardNoMove.moveDice(List.of(new Coordinate(0,0)),List.of(new Coordinate(1,0)) , false, false, false);
+            testPlayerWithWhitePatternCardNoMove.moveDice(
+                    new ArrayList<Coordinate>(Arrays.asList(new Coordinate(0,0))),
+                    new ArrayList<Coordinate>(Arrays.asList(new Coordinate(1,0))),
+                    false, false, false);
             testPlayerWithWhitePatternCardNoMove.endTurn();
             Assert.assertNotEquals(testPlayerWithWhitePatternCardNoMove,memento);
             testPlayerWithWhitePatternCardNoMove.saveMemento(memento);
@@ -696,8 +699,10 @@ public class PlayerTest {
             testPlayerWithWhitePatternCardNoMove.placeDie(new Die(2, Colour.VIOLET), 0, 0, true);
             testPlayerWithWhitePatternCardNoMove.endTurn();
             testPlayerWithWhitePatternCardNoMove.placeDie(new Die(4, Colour.RED), 0, 1, true);
-            testPlayerWithWhitePatternCardNoMove.moveDice(List.of(new Coordinate(0,0), new Coordinate(0,1)),
-                                                            List.of(new Coordinate(1,0), new Coordinate(0,0)), true, true, true);
+            testPlayerWithWhitePatternCardNoMove.moveDice(
+                    new ArrayList<Coordinate>(Arrays.asList(new Coordinate(0,1))),
+                    new ArrayList<Coordinate>(Arrays.asList(new Coordinate(0,0))),
+                    true, true, true);
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -709,8 +714,10 @@ public class PlayerTest {
             testPlayerWithWhitePatternCardNoMove.placeDie(new Die(2, Colour.VIOLET), 2, 0, true);
             testPlayerWithWhitePatternCardNoMove.endTurn();
             testPlayerWithWhitePatternCardNoMove.placeDie(new Die(4, Colour.RED), 3, 1, true);
-            testPlayerWithWhitePatternCardNoMove.moveDice(List.of(new Coordinate(2,0)),
-                    List.of( new Coordinate(3,1)), true, true, true);
+            testPlayerWithWhitePatternCardNoMove.moveDice(
+                    new ArrayList<Coordinate>(Arrays.asList(new Coordinate(2,0))),
+                    new ArrayList<Coordinate>(Arrays.asList(new Coordinate(3,1))),
+                    true, true, true);
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -719,7 +726,10 @@ public class PlayerTest {
     @Test
     public void testMovementExceptionWhenDieIsNull(){
         try {
-            testPlayerWithWhitePatternCardNoMove.moveDice(List.of(new Coordinate(0,0)), List.of(new Coordinate(3,4)),true, true, true);
+            testPlayerWithWhitePatternCardNoMove.moveDice(
+                    new ArrayList<Coordinate>(Arrays.asList(new Coordinate(0,0))),
+                    new ArrayList<Coordinate>(Arrays.asList(new Coordinate(3,4))),
+                    true, true, true);
         } catch (RuleViolatedException ignored) {
 
         } catch (Exception e) {
